--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
     box-sizing: 0;
     --blue: #2945FF;
     --white: #ffffff;
+    --bg: #1E1E1E;
     font-family: Arial, Helvetica, sans-serif;
   }
 
