--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -1,1 +1,101 @@
 @import url('~/src/App.css');
+
+.timeline {
+    background-color: var(--bg);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    display: block;
+    padding: 225px;
+  }
+
+    .timeline-content {
+        color: #FFFFFF;
+        font-family: href="https://fonts.googleapis.com/css?family=Inter";  
+        padding: 40px;
+        align-content: center;
+    }
+
+    .timeline-maintext {
+        animation: fadeIn 4s;
+        font-size: 33px;
+        position: relative;
+        text-align: center;
+        margin-top: 10px;
+        z-index: 2;
+    }
+
+    .timeline-subtext {
+        font-family: href="https://fonts.googleapis.com/css2?family=Inter:wght@100";
+        animation: fadeIn 4s;
+        font-size: 15px;
+        line-height: 25px;
+        position: relative;
+        text-align: center;
+        margin-top: 10px;
+        z-index: 2;
+    }
+
+.timeline-partners {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+    .partner-images {
+        animation: fadeIn 3s;
+        width: auto;
+        height: 300px;
+    }
+
+    .jan-partners-box {
+        animation: fadeIn 3s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        background: #e1dcff;
+        border-radius: 15px;
+        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    .feb-partners-box {
+        animation: fadeIn 3s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        background: #ffd9d9;
+        border-radius: 15px;
+        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    .march-partners-box {
+        animation: fadeIn 3s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        background: #ffebd9;
+        border-radius: 15px;
+        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+.timeline-partners-text {
+    color: white;
+    animation: fadeIn 4s;
+    font-size: 23px;
+    font-weight: bold;
+    position: relative;
+    text-align: left;
+    margin-top: 17px;
+    z-index: 2;
+}
+
+    
+
+
+
