--- a/src/components/Whysignup/whysignup.css
+++ b/src/components/Whysignup/whysignup.css
@@ -32,13 +32,13 @@
   }
 
   a:link {
-    color: rgb(0, 0, 0);
+    /* color: rgb(0, 0, 0); */
     background-color: transparent;
     text-decoration: none;
   }
 
   a:visited {
-    color: rgb(0, 0, 0);
+    /* color: rgb(0, 0, 0); */
     background-color: transparent;
     text-decoration: none;
   }
