--- a/src/components/Whysignup/whysignup.css
+++ b/src/components/Whysignup/whysignup.css
@@ -1,94 +1,110 @@
 
 :root {
-    --font-size-m: 8px;
-    --font-size-l: 10px;
-    --font-size-xl: 20px;
-    color: #FFFFFF;
-  }
-  
-  .home-container {
-    background-color: var(--bg);
-    display: flex;
-    flex-wrap: wrap;
-    font-family: href="https://fonts.googleapis.com/css?family=Inter";
-  }
-  
-  .about {
-    width: 100%;
-    padding: 2rem 10%;
-    font-size: 18px;
-  }
-  
-  .what-is {
-    padding: 4rem 0rem;
-    text-align: center;
-    font-size: 1.4rem;
-  }
-  
-  .what-is-title {
-    padding: 1.6rem 0rem;
-    font-size: 4rem;
-    font-weight: 550;
-  }
+  --font-size-m: 8px;
+  --font-size-l: 10px;
+  --font-size-xl: 20px;
+  color: #FFFFFF;
+}
 
-  a:link {
-    /* color: rgb(0, 0, 0); */
-    background-color: transparent;
-    text-decoration: none;
-  }
+.home-container {
+  background-color: var(--bg);
+  display: flex;
+  flex-wrap: wrap;
+  font-family: href="https://fonts.googleapis.com/css?family=Inter";
+}
 
-  a:visited {
-    /* color: rgb(0, 0, 0); */
-    background-color: transparent;
-    text-decoration: none;
-  }
+.about {
+  width: 100%;
+  padding: 2rem 10%;
+  font-size: 18px;
+}
 
+.what-is {
+  padding: 4rem 0rem;
+  text-align: center;
+  font-size: 1.4rem;
+}
+
+.what-is-title {
+  padding: 1.6rem 0rem;
+  font-size: 4rem;
+  font-weight: 550;
+}
+
+a:link {
+  /* color: rgb(0, 0, 0); */
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  /* color: rgb(0, 0, 0); */
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.left {
+  border-radius: 15px;
+  background-color: #EDF5FF;
+  display: inline-flex;
+} 
+
+.right {
+  border-radius: 15px;
+  background-color: #F5EDFF;
+  display: inline-flex;
+}
+
+.img-left{
+  position: relative;
+  text-align: right;
+}
+
+.img-right{
+  position: relative;
+  text-align: right;
+}
+
+.details-container {
+  color: #000000;
+  padding: 2rem 0rem;
+  display: flex;
+  justify-content: space-around;
+  gap: 4rem;
+}
+
+.details-container > div {
+  width: 37%;
+  padding: 3rem;
+}
+
+.details-container > div:hover {
+  scale: 1.02;
+}
+
+.details-container > div > h3 {
+  padding: 1rem 0rem 1.4rem 0rem;
+  font-size: 1.35rem;
+  font-weight: 700;
+}
+
+.details-container > div > p {
+  font-size: 1.35rem;
+  font-weight: 300;
+}
+
+@media screen and (max-width: 1010px) {
+  .details-container {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 912px) {
   .left {
-    border-radius: 15px;
-    background-color: #EDF5FF;
-    display: inline-flex;
+    flex-direction: column;
   } 
 
   .right {
-    border-radius: 15px;
-    background-color: #F5EDFF;
-    display: inline-flex;
+    flex-direction: column;
   }
-
-  .img-left{
-    position: relative;
-    text-align: right;
-  }
-
-  .img-right{
-    position: relative;
-    text-align: right;
-  }
-
-  .details-container {
-    color: #000000;
-    padding: 2rem 0rem;
-    display: flex;
-    justify-content: space-around;
-    gap: 4rem;
-  }
-  
-  .details-container > div {
-    width: 37%;
-    padding: 3rem;
-  }
-  
-  .details-container > div:hover {
-    scale: 1.02;
-  }
-  
-  .details-container > div > h3 {
-    padding: 1rem 0rem 1.4rem 0rem;
-    font-size: 1.35rem;
-    font-weight: 700;
-  }
-  
-  .details-container > div > p {
-    font-size: 1.35rem;
-    font-weight: 300;
-  }
+}
